adding pynisher to requirements.txt and setup.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ Cython
 
 git+https://github.com/automl/HPOlibConfigSpace@refactor
 git+https://bitbucket.org/aadfreiburg/random_forest_run.git@master
+git+https://github.com/sfalkner/pynisher.git@master
