--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 setuptools
 numpy>=1.9.1
 scipy>=0.16.1
+pynisher>=0.4.1
 
 six
 Cython
 
 git+https://github.com/automl/HPOlibConfigSpace@refactor
 git+https://bitbucket.org/aadfreiburg/random_forest_run.git@master
-git+https://github.com/sfalkner/pynisher.git@master
