--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,6 @@ install:
 
 # command to run tests, e.g. python setup.py test
 script:
-  - nosetests -sv --with-coverage
+  - nosetests -sv --with-coverage --cover-package=smac
 after_success:
   - coveralls
