--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,11 @@ addons:
     - gfortran
 
 before_install:
-  - wget http://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh
+  - wget http://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - conda update --yes conda
+  - conda update --all python=$TRAVIS_PYTHON_VERSION
 
 install:
   - conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy>=1.6.1 scipy>=0.13.1 six nose setuptools Cython
