--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ matrix:
 
   include:
   - os: linux
-    env: DISTRIB="conda" PYTHON_VERSION="3.4"
+    env: DISTRIB="conda" TRAVIS_PYTHON_VERSION="3.4"
   - os: linux
-    env: DISTRIB="conda" PYTHON_VERSION="3.5" COVERAGE="true"
+    env: DISTRIB="conda" TRAVIS_PYTHON_VERSION="3.5" COVERAGE="true"
 
   # Set language to generic to not break travis-ci
   # https://github.com/travis-ci/travis-ci/issues/2312#issuecomment-195620855
