--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ matrix:
 
   include:
   - os: linux
-    env: TRAVIS_PYTHON_VERSION="3.4"
+    env: PYTHON_VERSION="3.4"
   - os: linux
-    env: TRAVIS_PYTHON_VERSION="3.5" COVERAGE="true"
+    env: PYTHON_VERSION="3.5" COVERAGE="true"
 
   # Set language to generic to not break travis-ci
   # https://github.com/travis-ci/travis-ci/issues/2312#issuecomment-195620855
@@ -15,11 +15,11 @@ matrix:
   - os: osx
     sudo: required
     language: generic
-    env: TRAVIS_PYTHON_VERSION="3.4"
+    env: PYTHON_VERSION="3.4"
   - os: osx
     sudo: required
     language: generic
-    env: TRAVIS_PYTHON_VERSION="3.5"
+    env: PYTHON_VERSION="3.5"
 
 cache:
   directories:
@@ -36,8 +36,7 @@ before_install:
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - conda update --yes conda
-  - env
-  - conda create -n testenv --yes python=$TRAVIS_PYTHON_VERSION pip wheel nose
+  - conda create -n testenv --yes python=$PYTHON_VERSION pip wheel nose
   - source activate testenv
   - conda install --yes gcc
 
