--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ before_install:
   - export CC=`which gcc`
 
 install:
-  - pip install coverage pep8 python-coveralls
+  - pip install pep8 codecov
   - cat requirements.txt | xargs -n 1 -L 1 pip install
   - python setup.py install
 
@@ -59,4 +59,4 @@ install:
 script:
   - nosetests -sv --with-coverage --cover-package=smac
 after_success:
-  - coveralls
+  - codecov
