--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ dependencies:
 
   # Various dependencies
   pre:
-    - wget $MINICONDA_URL -O miniconda.sh
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
     - if [[ `which conda` ]]; then echo 'Conda installation successful'; else exit 1; fi
