--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ dependencies:
     - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
+    - echo $PATH
     - which conda
     - conda update --yes conda
     - conda create -n testenv --yes python pip wheel nose
