--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,6 @@
 machine:
+  python:
+    version: 3.6.1
   environment:
     # The github organization or username of the repository which hosts the
     # project and documentation.
@@ -17,25 +19,19 @@ dependencies:
 
   # Various dependencies
   pre:
-    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH="$HOME/miniconda/bin:$PATH"
-    - echo $PATH
-    - which conda
-    - conda update --yes conda
-    - conda create -n testenv --yes python pip wheel nose
-    - source activate testenv
-    - conda install --yes gcc
-    - echo "Using GCC at "`which gcc`
-    - export CC=`which gcc`
-
-    # First, install all dependencies
-    - cat requirements.txt | xargs -n 1 -L 1 pip install
+    # from scikit-learn contrib
+    - sudo -E apt-get -yq remove texlive-binaries --purge
+    - sudo apt-get update
+    - sudo apt-get install libatlas-dev libatlas3gf-base
+    - sudo apt-get install build-essential python-dev python-setuptools
+    # install numpy first as it is a compile time dependency for other packages
+    - pip install --upgrade numpy
     # install documentation building dependencies
     - pip install --upgrade matplotlib setuptools nose coverage sphinx pillow sphinx-gallery sphinx_bootstrap_theme cython numpydoc
     # Installing required packages for `make -C doc check command` to work.
     - sudo -E apt-get -yq update
     - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install dvipng texlive-latex-base texlive-latex-extra
+    # Installing packages to build the random forest
     # finally install the requirements of the package to allow autodoc
     - pip install -r requirements.txt
 
