fix circle.yml for new pyrfr (swig)

--- a/circle.yml
+++ b/circle.yml
@@ -24,6 +24,7 @@ dependencies:
     - sudo apt-get update
     - sudo apt-get install libatlas-dev libatlas3gf-base
     - sudo apt-get install build-essential python-dev python-setuptools
+    - sudo apt-get install swig
     # install numpy first as it is a compile time dependency for other packages
     - pip install --upgrade numpy
     # install documentation building dependencies
