--- a/circle.yml
+++ b/circle.yml
@@ -23,8 +23,8 @@ dependencies:
     - sudo -E apt-get -yq remove texlive-binaries --purge
     - sudo apt-get update
     - sudo apt-get install libatlas-dev libatlas3gf-base
-    - sudo apt-get install build-essential python-dev python-setuptools
-    - sudo apt-get install swig
+    - sudo apt-get install build-essential python3-dev python3-setuptools
+    - sudo apt-get install swig3
     # install numpy first as it is a compile time dependency for other packages
     - pip install --upgrade numpy
     # install documentation building dependencies
