create pep8 config

--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,8 @@ deps =
 commands=
     python setup.py install
     python setup.py test
+
+[pep8]
+full = true
+max-line-length = 100
+strictness = veryhigh
