--- a/circle.yml
+++ b/circle.yml
@@ -27,7 +27,7 @@ dependencies:
     - sudo -E apt-get -yq update
     - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install dvipng texlive-latex-base texlive-latex-extra
     # Conda installation
-    - wget http://repo.continuum.io/miniconda/Miniconda3-4.3.21-Linux-x86_64.sh -O ~/miniconda.sh
+    - wget "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" -O ~/miniconda.sh
     - bash ~/miniconda.sh -b -p $HOME/miniconda
     - conda create -n testenv --yes python=3.6 pip wheel nose gxx_linux-64 gcc_linux-64 swig
 
