issue #351: after a test case was run remove the data it has generated, add bash script to check if test cases leave any files behind them and call it in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,6 @@ install:
 
 # command to run tests, e.g. python setup.py test
 script:
-  - nosetests -sv --with-coverage --cover-package=smac
+  - nosetests -sv --with-coverage --cover-package=smac && bash scripts/test_no_files_left.sh
 after_success:
   - codecov
