issue #373: Add Makefile with `test`, `test-fast`, `test-runtimes`, `clean`, `clean-data` and `doc` targets. Fix rst files and docstrings which sphinx reported errors/warnings on. Print revision being tested on travis. Add 'slow' attribute on test cases slower than 1s.

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ install:
 
 # command to run tests, e.g. python setup.py test
 script:
-  - nosetests -sv --with-coverage --cover-package=smac && bash scripts/test_no_files_left.sh
+  - echo Testing revision $(git rev-parse HEAD) ...
+  - make test && bash scripts/test_no_files_left.sh
 after_success:
   - codecov
