--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -1,17 +1,24 @@
-strictness: medium     # default strictness
-test-warnings: false   # inspect unittests
-doc-warnings: true     # inspect docstrings
+strictness: medium       # default strictness
+test-warnings: false     # inspect unittests
+doc-warnings: true       # inspect docstrings
 
-ignore-paths:          # ignore the docs folder
+ignore-paths:            # ignore the docs folder
   - docs
   - ci_scripts
   - examples
 
 pep8:
   disable:
-    - N806              # ignore pep8 naming (func arg should be lowercase i.e. X_pred)
+    - N802               # ignore pep8 naming (func name should be lowercase i.e. get_X_y())
+    - N806               # ignore pep8 naming (func arg should be lowercase i.e. X_pred)
   options:
     max-line-length: 120
+
+pep257:
+  disable:
+    - D203               # 1 blank line required before class docstring (conflicts with D211 [no blanks allowed])
+    - D212               # Multi-line docstring summary should start at the first line(conflicts with D213 [first line])
+    - D205               # 1 blank line required between summary line and description
 
 pylint:
   disable:
@@ -19,6 +26,7 @@ pylint:
     - R0916              # ignore pylint too-many-boolean-expressions
     - R0902              # ignore pylint too-many-instance-attributes
     - R0914              # ignore pylint too-many-locals
+    - R0915              # ignore pylint too-many-statements
   options:
     max-line-length: 120
 
