--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ before_install:
 install:
   - pip install pep8 codecov mypy flake8
   - cat requirements.txt | xargs -n 1 -L 1 pip install
-  - python setup.py install
+  - pip install .[all]
 
 script:
   - ci_scripts/$TESTSUITE
