--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ before_install:
   - source activate testenv
 
 install:
-  - pip install pep8 codecov mypy flake8
+  - pip install pep8 codecov mypy flake8 pytest-cov
   - cat requirements.txt | xargs -n 1 -L 1 pip install
   - pip install .[all]
 
