--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ scipy>=0.18.1
 psutil
 pynisher>=0.4.1
 ConfigSpace>=0.4.9,<0.5
-scikit-learn>=0.18.0,<0.22
+scikit-learn>=0.22.0
 pyrfr>=0.8.0
 sobol_seq
 joblib
