adding scripts for travis install

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,17 +55,10 @@ before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
 
 before_install:
-  - wget $MINICONDA_URL -O miniconda.sh
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - if [[ `which conda` ]]; then echo 'Conda installation successful'; else exit 1; fi
-  - conda create -n testenv --yes python=$PYTHON_VERSION pip wheel pytest gxx_linux-64 gcc_linux-64 swig
-  - source activate testenv
+  - ci_scripts/install_env.sh
 
 install:
-  - pip install pep8 codecov mypy flake8 pytest-cov
-  - cat requirements.txt | xargs -n 1 -L 1 pip install
-  - pip install .[all]
+  - ci_scripts/install.sh
 
 script:
   - ci_scripts/$TESTSUITE
