--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,7 +12,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        pip install -e .[docs,examples,examples_unix]
+        pip install -e .[all]
     - name: Make docs
       run: |
         cd doc
