--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -55,7 +55,7 @@ jobs:
         sudo ln -s /usr/bin/swig3.0 /usr/bin/swig
         # We need to install for the dependencies, like pytest
         python setup.py sdist
-        last_dist=$(ls -t dist/auto-sklearn-*.tar.gz | head -n 1)
+        last_dist=$(ls -t dist/smac-*.tar.gz | head -n 1)
         pip install $last_dist[all]
     - name: Store repository status
       id: status-before
