Adding license_file to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author_email = "fh@cs.uni-freiburg.de"
 description = SMAC3, a Python implementation of 'Sequential Model-based Algorithm Configuration'.
 long_description = file: README.md, CHANGELOG.md, LICENSE
 license = 3-clause BSD
+license_file = LICENSE
 keywords = machine learning, algorithm configuration, hyperparameter optimization, tuning
 classifiers=
         Development Status :: 3 - Alpha
