--- a/doc/Makefile
+++ b/doc/Makefile
@@ -192,6 +192,11 @@ pseudoxml:
 	@echo
 	@echo "Build finished. The pseudo-XML files are in $(BUILDDIR)/pseudoxml."
 
+html-noplot:
+	$(SPHINXBUILD) -D plot_gallery=0 -b html $(ALLSPHINXOPTS) $(SOURCEDIR) $(BUILDDIR)/html
+	@echo
+	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+
 buildapi:
 	sphinx-apidoc -fePTMo apidoc/ ../smac/
 	rm apidoc/smac.rst
