Ignore sphinx gallery smac output

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ doc/apidoc
 doc/examples
 doc/quickstart
 
+# Generated from running Sphinx-Gallery
+examples/general/smac3-output_*
+examples/quickstart/smac3-output_*
+
 # Dask created work space
 dask-worker-space
 
