--- a/doc/Makefile
+++ b/doc/Makefile
@@ -18,6 +18,7 @@ PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 # the i18n builder cannot share the environment and doctrees with the others
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
+MAKEFILE_DIR     = $(shell pwd)
 
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest coverage gettext
 
@@ -51,6 +52,8 @@ help:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+	rm -rf $(MAKEFILE_DIR)/quickstart
+	rm -rf $(MAKEFILE_DIR)/examples
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
