--- a/.github/workflows/terminal_examples.yml
+++ b/.github/workflows/terminal_examples.yml
@@ -28,26 +28,26 @@ jobs:
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        cd examples/spear_qcp
+        cd examples/quickstart/spear_qcp
         bash run_SMAC.sh
     - name: Spear QCP ROAR
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        cd examples/spear_qcp
+        cd examples/quickstart/spear_qcp
         bash run_ROAR.sh
     - name: Spear QCP Successive halving
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        cd examples/spear_qcp
+        cd examples/quickstart/spear_qcp
         python SMAC4AC_SH_spear_qcp.py
     - name:  Branin from the command line
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        cd examples/branin
+        cd examples/quickstart/branin
         python ../../scripts/smac --scenario scenario.txt
