Added API Reference

--- a/docs/themes/smac/theme.conf
+++ b/docs/themes/smac/theme.conf
@@ -13,9 +13,9 @@ use_edit_page_button = False
 external_links =
 logo_link =
 bitbucket_url =
-github_url = 
+github_url = "https://github.com/automl/SMAC3"
 gitlab_url =
-twitter_url = 
+twitter_url = "https://github.com/automl/SMAC3"
 icon_links_label = Icon Links
 icon_links =
 google_analytics_id =
@@ -25,8 +25,8 @@ search_bar_text = Search the docs ...
 search_bar_position = sidebar
 navigation_with_keys = True
 collapse_navigation = False
-navigation_depth = 4
-show_toc_level = 4
+navigation_depth = 2
+show_toc_level = 1
 navbar_align = content
 navbar_start = templates/navbar-logo.html
 # navbar_center = search-field.html
