pip install bs4 for docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -e .[all]
+        pip install bs4
 
     - name: Make docs
       run: |
