--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,12 +1,29 @@
 name: pre-commit
 
-on: [push, pull_request]
+on:
+  # Manual trigger option in github
+  workflow_dispatch:
+
+  # Trigger on push to these branches
+  push:
+    branches:
+      - master
+      - development
+
+  # Trigger on a open/push to a PR targeting one of these branches
+  pull_request:
+    branches:
+      - master
+      - development
 
 jobs:
+
   run-all-files:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Setup Python 3.7
       uses: actions/setup-python@v2
@@ -17,7 +34,7 @@ jobs:
       run: |
         pip install pre-commit
         pre-commit install
-        
+
     - name: Run pre-commit
       run: |
         pre-commit run --all-files
