--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -70,8 +70,7 @@ jobs:
           # Include one config with dist, ubunut-3.7-dist
           - os: ubuntu-latest
             python-version: 3.7
-            kind: 'dist'
-
+            install-from: 'dist'
     steps:
 
     - name: Checkout
@@ -83,7 +82,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Conda install
-      if: matrix.kind == 'conda'
+      if: matrix.install-from == 'conda'
       run:
         # Miniconda is available in $CONDA env var
         $CONDA/bin/conda create -n testenv --yes pip wheel gxx_linux-64 gcc_linux-64 swig python=${{ matrix.python-version }}
@@ -91,13 +90,13 @@ jobs:
         $CONDA/envs/testenv/bin/pip3 install -e .[all]
 
     - name: Source install
-      if: matrix.kind == 'source'
+      if: matrix.install-from == 'source'
       run: |
         python -m pip install --upgrade pip
         pip install -e .[all]
 
     - name: Dist install
-      if: matrix.kind == 'dist'
+      if: matrix.install-from == 'dist'
       run: |
         python -m pip install --upgrade pip
         python setup.py sdist
@@ -111,7 +110,7 @@ jobs:
 
     - name: Conda tests
       timeout-minutes: 45
-      if: matrix.kind == 'conda'
+      if: matrix.install-from == 'conda'
       run: |
         PYTHON=$CONDA/envs/testenv/bin/python3
 
@@ -123,9 +122,9 @@ jobs:
 
     - name: Source tests
       timeout-minutes: 45
-      if: matrix.kind == 'source'
+      if: matrix.install-from == 'source'
       run: |
-        if [ ${{ matrix.code-cov }} ]; then codecov='--cov=smac --cov-report=xml'; fi
+        if [ ${{ matrix.code-cov }} ]; then
           pytest ${{ env.pytest-args }} ${{ env.code-cov-args }} test
         else
           pytest ${{ env.pytest-args }} test
