remove bad quote

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -35,7 +35,7 @@ env:
   # Arguments used for code-cov which is later used to annotate PR's on github
   code-cov-args: >-
     --cov=smac
-    --cov-report=xml'
+    --cov-report=xml
 
 jobs:
   ubuntu:
