--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -51,4 +51,4 @@ jobs:
       run: |
         pip install mypy
         cd ..  # required to use the installed version of smac
-        if ! python -c "import smac"; then exit 1; fi
+        if ! mypy -c "import smac"; then exit 1; fi
