--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -43,14 +43,16 @@ jobs:
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
+        $CONDA/bin/conda activate testenv
         export PATH="$CONDA/envs/testenv/bin:$PATH"
         cd examples/commandline
         bash spear_qcp_roar.sh
-        
+
     - name: Spear-QCP SMAC (Commandline)
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
+        $CONDA/bin/conda activate testenv
         export PATH="$CONDA/envs/testenv/bin:$PATH"
         cd examples/commandline
         bash spear_qcp_smac.sh
@@ -59,6 +61,7 @@ jobs:
       timeout-minutes: 20
       run: |
         # Activate anaconda so default python is from conda
+        $CONDA/bin/conda activate testenv
         export PATH="$CONDA/envs/testenv/bin:$PATH"
         cd examples/commandline
         python ../../scripts/smac.py --scenario branin/scenario.txt
