--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        $CONDA/bin/conda activate testenv
+        $CONDA/bin/activate testenv
         cd examples/commandline
         bash spear_qcp_roar.sh
 
@@ -53,7 +53,7 @@ jobs:
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        $CONDA/bin/conda activate testenv
+        $CONDA/bin/activate testenv
         cd examples/commandline
         bash spear_qcp_smac.sh
 
@@ -62,6 +62,6 @@ jobs:
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        $CONDA/bin/conda activate testenv
+        $CONDA/bin/activate testenv
         cd examples/commandline
         python ../../scripts/smac.py --scenario branin/scenario.txt
