--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -44,9 +44,7 @@ jobs:
       run: |
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
-        conda activate testenv
-
-        
+        smac --version
         cd examples/commandline
         bash spear_qcp_roar.sh
 
