Try to make it run

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -45,6 +45,7 @@ jobs:
         # Activate anaconda so default python is from conda
         export PATH="$CONDA/envs/testenv/bin:$PATH"
         cd examples/commandline
+        python test.py
         bash spear_qcp_roar.sh
 
     - name: Spear-QCP SMAC (Commandline)
